# pure_robot_arm

./: README.md  detect_pun_30_09_2024.py  ros2_command_cil.py  topview.py
inverse_perspective_mapping/: CMakeLists.txt  package.xml
inverse_perspective_mapping/config/: config.yaml
inverse_perspective_mapping/scripts/: aruco_detector2_node.py  aruco_detector_node.py  cp.py  detect.py  detect2.py  detect3.py  detect_pun_30_09_2024.py  hsv_filter_node.py  note.txt  test_api.py  tet.py  topview.py
inverse_perspective_mapping/src/: ipm_node.cpp
